--- a/main.css
+++ b/main.css
@@ -27,6 +27,7 @@
 }
 
 body{
+	width: 250px;
 	background-image: url(8.jpg);
 	background-size: 100%;
 	height: 100%;
@@ -39,7 +40,10 @@ body{
 }
 
 #form{
-	/*border: 3px solid black;*/
+	position: absolute;
+	top:0px;
+	right:500px;
+	border: 3px solid black;
 	text-align: center;
 	margin: 5px;
 	width: 170px;
